Gabriel - criado query find profissional programado por matricula e ajustado no crud profissional

--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -70,7 +70,7 @@
 				
 				<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
 					<pretty:link mappingId="profissional-editar">
-						<f:param value="#{profissional.id}" />
+						<f:param value="#{profissional.matricula}" />
 						<p:commandButton id="editar" styleClass="btn-acao" type="button" icon="ui-icon-pencil" />
 					</pretty:link>
 					<p:commandButton id="desativar" styleClass="btn-acao" icon="ui-icon-closethick" action="#{profissionalManager.desativar(profissional.id)}" update="gridProfissional" >
