--- a/src/main/webapp/pages/celula/celula-incluir.xhtml
+++ b/src/main/webapp/pages/celula/celula-incluir.xhtml
@@ -4,33 +4,35 @@
     xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
-    	<p:breadCrumb>
-		    <p:menuitem value="#{message['pao.home']}" url="#" />
-		    <p:menuitem value="#{message['pao.celula']}" outcome="pretty:celula"/>
-		    <p:menuitem value="#{message['pao.celula.incluir']}" outcome="pretty:celula-incluir" disabled="true"/>
-		</p:breadCrumb>
-    	<h2>#{message['title.celulas']}</h2>
-        <h:form>
-        	<p:growl id="growl" life="4000" />
-			<p:panel header="#{message['title.celula.cadastro']}" id="painel">	
-				<p:focus context="painel"/>		
-				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
-				<p:inputText id="nome" value="#{celulaManager.celula.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
-				<br /><br />
-				<p:outputLabel for="descricao" value="#{message['label.descricao']}" styleClass="label" />
-				<p:inputText id="descricao" value="#{celulaManager.celula.descricao}" required="true" requiredMessage="#{message['span.obrigatorio.Descricao']}" />
-				<br /><br />
-				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
-				<p:calendar id="button" value="#{celulaManager.celula.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
-				<br /><br />
-				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
-				<p:calendar id="buttonFim" value="#{celulaManager.celula.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
-				<br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{celulaManager.save()}" update="growl" styleClass="btn"/>				
-				<p:button  value="#{message['button.cancelar']}" outcome="pretty:celula" styleClass="btn"/>
-				
-			</p:panel>
-		</h:form>
+    	<div class="incluir-editar">
+	    	<p:breadCrumb>
+			    <p:menuitem value="#{message['pao.home']}" url="#" />
+			    <p:menuitem value="#{message['pao.celula']}" outcome="pretty:celula"/>
+			    <p:menuitem value="#{message['pao.celula.incluir']}" outcome="pretty:celula-incluir" disabled="true"/>
+			</p:breadCrumb>
+	    	<h2>#{message['title.celulas']}</h2>
+	        <h:form>
+	        	<p:growl id="growl" life="4000" />
+				<p:panel header="#{message['title.celula.cadastro']}" id="painel">	
+					<p:focus context="painel"/>		
+					<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
+					<p:inputText id="nome" value="#{celulaManager.celula.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
+					<br /><br />
+					<p:outputLabel for="descricao" value="#{message['label.descricao']}" styleClass="label" />
+					<p:inputText id="descricao" value="#{celulaManager.celula.descricao}" required="true" requiredMessage="#{message['span.obrigatorio.Descricao']}" />
+					<br /><br />
+					<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
+					<p:calendar id="button" value="#{celulaManager.celula.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+					<br /><br />
+					<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
+					<p:calendar id="buttonFim" value="#{celulaManager.celula.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
+					<br /><br />
+					<p:commandButton value="#{message['button.salvar']}" action="#{celulaManager.save()}" update="growl" styleClass="btn"/>				
+					<p:button  value="#{message['button.cancelar']}" outcome="pretty:celula" styleClass="btn"/>
+					
+				</p:panel>
+			</h:form>
+		</div>
     </ui:define>
 
 </ui:composition>
