--- a/src/main/webapp/pages/formaContratacao/formaContratacao-incluir.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-incluir.xhtml
@@ -4,30 +4,32 @@
     xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
-    	<p:breadCrumb>
-		    <p:menuitem value="#{message['pao.home']}" url="#" />
-		    <p:menuitem value="#{message['pao.formaContratacao']}" outcome="pretty:formaContratacao"/>
-		    <p:menuitem value="#{message['pao.formaContratacao.incluir']}" outcome="pretty:formaContratacao-incluir" disabled="true"/>
-		</p:breadCrumb>
-    	<h2>#{message['title.formaContratacao']}</h2>
-        <h:form>
-        	<p:growl id="growl" life="4000" />
-			<p:panel header="#{message['title.formaContratacao.cadastro']}" id="painel">	
-			
-				<p:focus context="painel"/>		
-				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
-				<p:inputText id="nome" value="#{formaContratacaoManager.formaContratacao.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
-				<br /><br />
-				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
-				<p:calendar id="button" value="#{formaContratacaoManager.formaContratacao.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
-				<br /><br />
-				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
-				<p:calendar id="buttonFim" value="#{formaContratacaoManager.formaContratacao.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
-				<br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{formaContratacaoManager.save()}" update="growl" />				
-				<p:button  value="#{message['button.cancelar']}" outcome="pretty:formaContratacao"/>
+    	<div class="incluir-editar">
+	    	<p:breadCrumb>
+			    <p:menuitem value="#{message['pao.home']}" url="#" />
+			    <p:menuitem value="#{message['pao.formaContratacao']}" outcome="pretty:formaContratacao"/>
+			    <p:menuitem value="#{message['pao.formaContratacao.incluir']}" outcome="pretty:formaContratacao-incluir" disabled="true"/>
+			</p:breadCrumb>
+	    	<h2>#{message['title.formaContratacao']}</h2>
+	        <h:form>
+	        	<p:growl id="growl" life="4000" />
+				<p:panel header="#{message['title.formaContratacao.cadastro']}" id="painel">	
 				
-			</p:panel>
-		</h:form>
+					<p:focus context="painel"/>		
+					<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
+					<p:inputText id="nome" value="#{formaContratacaoManager.formaContratacao.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
+					<br /><br />
+					<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
+					<p:calendar id="button" value="#{formaContratacaoManager.formaContratacao.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+					<br /><br />
+					<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
+					<p:calendar id="buttonFim" value="#{formaContratacaoManager.formaContratacao.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
+					<br /><br />
+					<p:commandButton value="#{message['button.salvar']}" action="#{formaContratacaoManager.save()}" update="growl" />				
+					<p:button  value="#{message['button.cancelar']}" outcome="pretty:formaContratacao"/>
+					
+				</p:panel>
+			</h:form>
+		</div>
     </ui:define>
 </ui:composition>
