--- a/src/main/webapp/pages/relatorio/relatorio-valor-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-valor-equipe.xhtml
@@ -13,9 +13,10 @@
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Relatorio" outcome="pretty:relatorio" disabled="true"/>
 		</p:breadCrumb>
-		<h2>#{message['title.relatorio.profissional.equipe']}</h2>
+		<h2>#{message['title.relatorio.valor.contratacao']}</h2>
 		
-		<p:chart type="bar" model="#{relatorioManager.valorPorEquipe}" style="height:300px" responsive="true">
+		<p:chart type="bar" model="#{relatorioManager.valorPorEquipe}" style="height:300px" responsive="true" extender="decimalConverter">
+			
 			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectProfissionalPorEquipe}" process="@this" update="gridRelatorio"/>
 		</p:chart>
 	</h:form>
