Gabriel - ajuste em perfilStefanini-editar.xhtml, ajuste em update de perfil Stefanini service

--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
@@ -5,7 +5,7 @@
     xmlns:pe="http://primefaces.org/ui/extensions">
 
     <ui:define name="content">
-    	<<div class="incluir-editar">
+    	<div class="incluir-editar">
 	    	<p:breadCrumb>
 			    <p:menuitem value="#{message['pao.home']}" url="#" />
 			    <p:menuitem value="#{message['pao.perfilStefanini']}" outcome="pretty:perfilStefanini"/>
