--- a/src/main/webapp/pages/relatorio/relatorio-contratacao-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-contratacao-equipe.xhtml
@@ -13,10 +13,10 @@
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Relatorio" outcome="pretty:relatorio" disabled="true"/>
 		</p:breadCrumb>
-		<h2>#{message['title.relatorio.profissional.equipe']}</h2>
+		<h2>#{message['title.relatorio.forma.contratacao']}</h2>
 		
 		<p:chart type="bar" model="#{relatorioManager.contratacaoPorEquipe}" style="height:300px" responsive="true">
-			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectProfissionalPorEquipe}" process="@this" update="gridRelatorio"/>
+			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectCltXestagioPorEquipe}" process="@this" update="gridRelatorio"/>
 		</p:chart>
 	</h:form>
 		<br /><br />
