--- a/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
@@ -13,7 +13,7 @@
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Relatorio" outcome="pretty:relatorio" disabled="true"/>
 		</p:breadCrumb>
-		<h2>#{message['title.relatorio.profissional.equipe']}</h2>
+		<h2>#{message['title.relatorio.perfil.equipe']}</h2>
 		
 		<p:chart type="bar" model="#{relatorioManager.perfilPorEquipe}" style="height:300px" responsive="true">
 			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectPerfilPorEquipe}" process="@this" update="gridRelatorio"/>
