--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
@@ -33,7 +33,7 @@
 					</p:column>
 					<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
 						<pretty:link mappingId="perfilStefanini-editar">
-							<f:param value="#{perfilStefanini.id}" />
+							<f:param value="#{perfilStefanini.codigo}" />
 							<p:commandButton id="editar" styleClass="btn-acao" type="button" icon="ui-icon-pencil" />
 						</pretty:link>
 						<p:commandButton id="desativar" styleClass="btn-acao" icon="ui-icon-closethick" action="#{perfilStefaniniManager.desativar(perfilStefanini.id)}" update="gridPerfilStefanini" >
