--- a/src/main/webapp/pages/cargo/cargo-listar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-listar.xhtml
@@ -15,6 +15,11 @@
 			<h2>#{message['title.cargos']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<h:form>
+			<br />
+			<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:cargo-incluir" />
+			<p:button id="historico" styleClass="btn-default" icon="ui-icon-script" outcome="pretty:cargo-historico" />
+			  <p:tooltip id="alt-historicoo" for="historico" value="#{message['label.historico']}" styleClass="alt"/>
+			<br />
 				<p:dataTable id="gridCargos" var="cargo" value="#{cargoManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" >
 	
 					<p:column headerText="#{message['label.nome']}" sortBy="#{cargo.nome}">
@@ -35,8 +40,7 @@
 					<p:commandButton value="#{message['button.nao']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
 				<br />
-				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:cargo-incluir" />
-			</h:form>
+				</h:form>
 		</div>
 	</ui:define>
 
