--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -15,6 +15,11 @@
 			<h2>#{message['title.equipes']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<h:form>
+						<br />
+				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:equipe-incluir" />
+			<p:button id="historico" styleClass="btn-default" icon="ui-icon-script" outcome="pretty:equipe-historico" />
+			  <p:tooltip id="alt-historicoo" for="historico" value="#{message['label.historico']}" styleClass="alt"/>
+			<br />
 				<p:dataTable id="gridEquipes" var="equipe" value="#{equipeManager.lista}" emptyMessage="#{message['alerta.listaVazia']}">
 					<p:column headerText="#{message['label.nome']}" sortBy="#{equipe.nome}">
 						<h:outputText value="#{equipe.nome}" />
@@ -35,7 +40,6 @@
 					<p:commandButton value="#{message['button.nao']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
 				<br />
-				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:equipe-incluir" />
 			</h:form>
 		</div>
 	</ui:define>
