--- a/src/main/webapp/pages/perfil/perfil-listar.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-listar.xhtml
@@ -15,6 +15,11 @@
 			<h2>#{message['title.perfis']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<h:form>
+						<br />
+				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:perfil-incluir" />
+			<p:button id="historico" styleClass="btn-default" icon="ui-icon-script" outcome="pretty:perfil-historico" />
+			  <p:tooltip id="alt-historicoo" for="historico" value="#{message['label.historico']}" styleClass="alt"/>
+			<br />
 				<p:dataTable id="gridPerfis" var="perfil"
 					value="#{perfilManager.lista}"
 					emptyMessage="#{message['alerta.listaVazia']}">
@@ -35,8 +40,7 @@
 					<p:commandButton value="Não" type="button"
 						styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
-				<br />
-				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:perfil-incluir" />
+
 			</h:form>
 		</div>
 	</ui:define>
