--- a/src/main/webapp/pages/status/status-listar.xhtml
+++ b/src/main/webapp/pages/status/status-listar.xhtml
@@ -14,6 +14,11 @@
 		<div class="panel-formulario">
 			<h2>#{message['title.status']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
+						<br />
+				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:status-incluir" />
+			<p:button id="historico" styleClass="btn-default" icon="ui-icon-script" outcome="pretty:status-historico" />
+			  <p:tooltip id="alt-historicoo" for="historico" value="#{message['label.historico']}" styleClass="alt"/>
+			<br />
 			<h:form>
 				<p:dataTable id="gridStatus" var="status" value="#{statusManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" >
 					<p:column headerText="#{message['label.nome']}" sortBy="#{status.nome}">
@@ -31,8 +36,7 @@
 					<p:commandButton value="#{message['button.nao']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
 				<br />
-				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:status-incluir" />
-			</h:form>
+				</h:form>
 		</div>
 	</ui:define>
 
