Ajuste no layout de historico

--- a/src/main/webapp/pages/cargo/cargo-historico.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-historico.xhtml
@@ -12,7 +12,7 @@
 		    <p:menuitem value="#{message['pao.cargo']}" outcome="pretty:cargo" />
 		    <p:menuitem value="#{message['pao.cargo.historico']}" outcome="pretty:cargo-historico" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="panel-formulario-historico">
 			<h2>#{message['title.cargos.historico']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<br />
