--- a/src/main/webapp/pages/celula/celula-historico.xhtml
+++ b/src/main/webapp/pages/celula/celula-historico.xhtml
@@ -12,7 +12,7 @@
 		    <p:menuitem value="#{message['pao.celula']}" outcome="pretty:celula" />
 		    <p:menuitem value="#{message['pao.celula.historico']}" outcome="pretty:celula-historico" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="panel-formulario-historico">
 			<h2>#{message['title.celulas.historico']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<br />
