--- a/src/main/webapp/pages/formaContratacao/formaContratacao-historico.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-historico.xhtml
@@ -12,7 +12,7 @@
 		    <p:menuitem value="#{message['pao.formaContratacao']}" outcome="pretty:formaContratacao" />
 		    <p:menuitem value="#{message['pao.formaContratacao.historico']}" outcome="pretty:formaContratacao-historico" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="panel-formulario-historico">
 			<h2>#{message['title.formaContratacao.historico']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<br />
