--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-historico.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-historico.xhtml
@@ -12,7 +12,7 @@
 		    <p:menuitem value="#{message['pao.cargaHoraria']}" outcome="pretty:cargaHoraria"/>
 		    <p:menuitem value="#{message['pao.cargaHoraria.historico']}" outcome="pretty:cargaHoraria-historico" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="panel-formulario-historico">
 			<h2>#{message['title.cargaHoraria.historico']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<h:form>
