--- a/src/main/webapp/pages/perfil/perfil-historico.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-historico.xhtml
@@ -12,7 +12,7 @@
 		    <p:menuitem value="#{message['pao.perfil']}" outcome="pretty:perfil" />
 		    <p:menuitem value="#{message['pao.perfil.historico']}" outcome="pretty:perfil-historico" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="panel-formulario-historicoo">
 			<h2>#{message['title.perfis.historico']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<br />
