--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-historico.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-historico.xhtml
@@ -12,7 +12,7 @@
 		    <p:menuitem value="#{message['pao.perfilStefanini']}" outcome="pretty:perfilStefanini"/>
 		<p:menuitem value="#{message['pao.perfilStefanini.historico']}" outcome="pretty:profissional-historico" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="panel-formulario-historico">
 			<h2>#{message['title.perfilStefanini.historico']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<h:form>
