--- a/src/main/webapp/pages/status/status-historico.xhtml
+++ b/src/main/webapp/pages/status/status-historico.xhtml
@@ -12,7 +12,7 @@
 		    <p:menuitem value="#{message['pao.status']}" outcome="pretty:status" />
 		    <p:menuitem value="#{message['pao.status.historico']}" outcome="pretty:status-historico" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="panel-formulario-historico">
 			<h2>#{message['title.status.historico']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<br />
