--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -18,23 +18,18 @@
 		<h:form>
 			
 			<div class="pesquisa">
-				<p:inputMask mask="999999" id="matricula" value="#{profissionalManager.profissional.matricula}" pt:placeholder="Pesquisar por Matrícula..."/>
-				<br/>			
-			
-				<p:inputText id="nome" value="#{profissionalManager.profissional.nome}" pt:placeholder="Pesquisar por Nome..."/>
-				<br/>
-				
-				<p:selectOneMenu id="equipe" value="#{profissionalManager.profissional.equipe}" converter="simpleEntityConverter">
+				<p:inputMask styleClass="input-pesquisa" mask="999999" id="matricula" value="#{profissionalManager.profissional.matricula}" pt:placeholder="Pesquisar por Matrícula..."/>
+				<p:inputText styleClass="input-pesquisa" id="nome" value="#{profissionalManager.profissional.nome}" pt:placeholder="Pesquisar por Nome..."/>
+				<p:selectOneMenu styleClass="dropdown-pesquisa" id="equipe" value="#{profissionalManager.profissional.equipe}" converter="simpleEntityConverter">
 						<f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
 						<f:selectItems value="#{equipeManager.listarAtivos()}" var="equipe" itemLabel="#{equipe.nome}" itemValue="#{equipe}"/>
-				</p:selectOneMenu>						
-				
-				<br/><br/>
-				<p:commandButton id="pesquisar" icon="ui-icon-search" action="#{profissionalManager.executaPesquisa()}" update="gridProfissional"/>
-				<p:commandButton id="limpar" icon="ui-icon-arrowreturnthick-1-w" action="#{profissionalManager.populaLista()}" update="gridProfissional"/>
-				<p:tooltip id="alt-pesquisar" for="pesquisar" value="Pesquisar" styleClass="alt"/>
-				<p:tooltip id="alt-limpar" for="limpar" value="Limpar" styleClass="alt"/>
-				<br/><br/>
+				</p:selectOneMenu>		
+				<div class="controle-pesquisa">
+					<p:commandButton id="pesquisar" icon="ui-icon-search" action="#{profissionalManager.executaPesquisa()}" update="gridProfissional"/>
+					<p:commandButton id="limpar" icon="ui-icon-arrowreturnthick-1-w" action="#{profissionalManager.populaLista()}" update="gridProfissional"/>
+					<p:tooltip id="alt-pesquisar" for="pesquisar" value="Pesquisar" styleClass="alt"/>
+					<p:tooltip id="alt-limpar" for="limpar" value="Limpar" styleClass="alt"/>
+				</div>
 			</div>
 
 			
