--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -22,7 +22,7 @@
 			<br />
 				<p:dataTable id="gridFormaContratacao" var="formaContratacao" value="#{formaContratacaoManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" >
 					
-					<p:column headerText="#{message['label.nome']}" sortBy="#{formaContratacao.nome}">
+					<p:column headerText="#{message['label.nome']}">
 						<h:outputText value="#{formaContratacao.nome}" />
 					</p:column>
 										
