--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
@@ -19,17 +19,17 @@
 			<br />
 			<h:form>
 				<p:dataTable id="gridPerfilStefanini" var="perfilStefanini" value="#{perfilStefaniniManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" >
-					<p:column headerText="#{message['label.nome']}" sortBy="#{perfilStefanini.nome}">
+					<p:column headerText="#{message['label.nome']}">
 						<h:outputText value="#{perfilStefanini.nome}"/>
 					</p:column>
 					
-					<p:column headerText="#{message['label.perfilStefanini.valorInicial']}" sortBy="#{perfilStefanini.valorInicial}">
+					<p:column headerText="#{message['label.perfilStefanini.valorInicial']}">
 						<h:outputText value="#{perfilStefanini.valorInicial}">
 							<f:convertNumber minFractionDigits="2" type="currency" currencySymbol="R$" />
 						</h:outputText>
 					</p:column>
 					
-					<p:column headerText="#{message['label.perfilStefanini.valorFinal']}" sortBy="#{perfilStefanini.valorFinal}" >
+					<p:column headerText="#{message['label.perfilStefanini.valorFinal']}">
 						<h:outputText value="#{perfilStefanini.valorFinal}">
 							<f:convertNumber minFractionDigits="2" type="currency" currencySymbol="R$"/>
 						</h:outputText>
