--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -18,6 +18,7 @@
 		<h:form>
 			
 			<div class="pesquisa">
+				<h1> Pesquisa Avançada </h1>
 
 				<p:inputMask styleClass="input-pesquisa" mask="999999" id="matricula" value="#{profissionalManager.profissional.matricula}" pt:placeholder="Matrícula"/>
 				<p:inputText styleClass="input-pesquisa" id="nome" value="#{profissionalManager.profissional.nome}" pt:placeholder="Nome"/>
