Gabriel - ajustando metodo desativar profissional

--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -103,7 +103,7 @@
 						<f:param value="#{profissional.matricula}" />
 						<p:commandButton id="historico" styleClass="btn-acao" type="button" icon="ui-icon-script" />
 					</pretty:link>
-					<p:commandButton id="desativar" styleClass="btn-acao" icon="ui-icon-closethick" action="#{profissionalManager.desativar(profissional.id)}" update="gridProfissional" >
+					<p:commandButton id="desativar" styleClass="btn-acao" icon="ui-icon-closethick" action="#{profissionalManager.desativar(profissional)}" update="gridProfissional" >
 						<p:confirm header="#{message['button.desativar']}" message="#{message['questiona.desativar']}" icon="ui-icon-alert" />	
 					</p:commandButton>
 					<p:tooltip id="alt-editarr" for="editar" value="#{message['label.editar']}" styleClass="alt"/>
