--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -3,7 +3,8 @@
     template="/pages/template/default.xhtml">
 
     <ui:define name="content">
-
+    	<h2 class="titulo-pagina">Bem-Vindo</h2>
+    	<p class="subtitulo-pagina">Principais Funções</p>
     	<h:link outcome="pretty:profissional">
    	   		<div id="profissionais" class="painel">        	
         		<div class="img-painel">
